--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ header {
 
 /* --- Category Navigation --- */
 #category-nav {
-    width: 200px;
+    width: 240px; /* Tăng độ rộng ở đây */
     margin-right: 1rem;
 }
 
